GNOME Bugzilla – Bug 668541
browser-plugin: plugin_enable_extension leaks invalid uuid
Last modified: 2012-01-26 00:04:20 UTC
plugin_enable_extension() needs to free the uuid when it's invalid.
Were you going to attach a patch, or shall I?
Wasn't going to attach a patch - just spotted it in review of browser-plugin changes.
Created attachment 206063 [details] [review] browser-plugin: Fix leak in plugin_enable_extension
Review of attachment 206063 [details] [review]: Looks good
Attachment 206063 [details] pushed as c6e924f - browser-plugin: Fix leak in plugin_enable_extension