browser-plugin: Fix leak in plugin_enable_extension

https://bugzilla.gnome.org/show_bug.cgi?id=668541